# archon

./: CMakeLists.txt  README.md  archonConfig.cmake.in
benchmark/: BenchmarkComponents.h  ecs_benchmarks.cpp  overhead_analysis.cpp  profile_benchmark.cpp
include/archon/: ecs.h  ecs.impl.h
src/: ecs.cpp
tests/: basic_tests.cpp  component_array_tests.cpp  concept_tests.cpp  const_correctness_test.cpp
